--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,14 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
+    <scm>
+        <connection>scm:git:https://github.com/decebals/wicket-pivot.git</connection>
+        <developerConnection>scm:git:https://github.com/decebals/wicket-pivot.git</developerConnection>
+        <url>git@github.com/decebals/wicket-pivot.git</url>
+        <tag>HEAD</tag>
+    </scm>
+        
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<wicketVersion>1.5.5</wicketVersion>
@@ -73,6 +80,17 @@
 					<warName>root</warName>
 				</configuration>
 			</plugin>
+			
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <goals>deploy</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <tagNameFormat>release-@{project.version}</tagNameFormat>
+                </configuration>
+            </plugin>			
 		</plugins>
 	</build>
 
