--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.asf.wicket.pivot</groupId>
 	<artifactId>wicket-pivot</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<packaging>war</packaging>
 	<name>Wicket Pivot</name>
 	<description>Simple web pivot table using Apache Wicket</description>
@@ -22,7 +21,7 @@
         <connection>scm:git:https://github.com/decebals/wicket-pivot.git</connection>
         <developerConnection>scm:git:https://github.com/decebals/wicket-pivot.git</developerConnection>
         <url>git@github.com/decebals/wicket-pivot.git</url>
-        <tag>HEAD</tag>
+        <tag>release-0.1</tag>
     </scm>
         
 	<properties>
