--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.asf.wicket.pivot</groupId>
 	<artifactId>wicket-pivot</artifactId>
-	<version>0.2</version>
+	<version>0.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Wicket Pivot</name>
 	<description>Simple web pivot table using Apache Wicket</description>
@@ -21,7 +21,7 @@
         <connection>scm:git:https://github.com/decebals/wicket-pivot.git</connection>
         <developerConnection>scm:git:https://github.com/decebals/wicket-pivot.git</developerConnection>
         <url>git@github.com/decebals/wicket-pivot.git</url>
-        <tag>release-0.2</tag>
+        <tag>HEAD</tag>
     </scm>
         
 	<properties>
