--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.asf.wicket.pivot</groupId>
+	<groupId>ro.fortsoft.wicket.pivot</groupId>
 	<artifactId>wicket-pivot</artifactId>
 	<version>0.3-SNAPSHOT</version>
 	<packaging>war</packaging>
