--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
     	<init-param>
       		<param-name>applicationClassName</param-name>
-      		<param-value>com.asf.wicket.pivot.demo.PivotApplication</param-value>
+      		<param-value>ro.fortsoft.wicket.pivot.demo.PivotApplication</param-value>
     	</init-param>
 	</filter>
 
