--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<wicketVersion>1.5.5</wicketVersion>
+		<wicket.version>6.5.0</wicket.version>
         <jetty.version>7.5.0.v20110901</jetty.version>
         <slf4j.version>1.6.4</slf4j.version>
 	</properties>   
@@ -94,41 +94,26 @@
 	</build>
 
 	<dependencies>
-		<!-- WICKET DEPENDENCIES -->
+		<!-- Wicket -->
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-core</artifactId>
-			<version>${wicketVersion}</version>
+			<version>${wicket.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-extensions</artifactId>
-			<version>${wicketVersion}</version>
+			<version>${wicket.version}</version>
 		</dependency>
-
-        <dependency>
-            <groupId>org.apache.wicket</groupId>
-            <artifactId>wicket-devutils</artifactId>
-            <version>${wicketVersion}</version>
-        </dependency>
 
         <!--  Wicket DND -->
-        <dependency>
-            <groupId>wicket-dnd</groupId>
-            <artifactId>wicket-dnd</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-
-        <!-- MySQL jdbc driver -->
-        <!--
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.13</version>
+            <groupId>com.github.svenmeier.wicket-dnd</groupId>
+            <artifactId>wicket-dnd</artifactId>
+            <version>0.6.0</version>
 		</dependency>
-		-->
-
+		
         <!-- Derby jdbc driver -->
 		<dependency>
 		    <groupId>org.apache.derby</groupId>
@@ -150,22 +135,16 @@
 		</dependency>
 
 		<!-- Logs -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
         </dependency>
         
 		<!-- Test -->
@@ -185,11 +164,4 @@
         </dependency>
 	</dependencies>
 
-    <repositories>
-        <repository> 
-            <id>wicket-dnd</id> 
-            <name>Wicket-dnd Repository</name> 
-            <url>http://wicket-dnd.googlecode.com/svn/repo</url> 
-        </repository> 
-    </repositories>
 </project>
