--- a/wicket-pivot/pom.xml
+++ b/wicket-pivot/pom.xml
@@ -14,14 +14,11 @@
 	<name>Wicket Pivot</name>
 	<description>Simple web pivot table using Apache Wicket</description>
         
+	<properties>
+        <gson.version>2.2.2</gson.version>
+	</properties>
+	
 	<dependencies>
-        <!--  Wicket DND -->
-		<dependency>
-            <groupId>com.github.svenmeier.wicket-dnd</groupId>
-            <artifactId>wicket-dnd</artifactId>
-            <version>0.6.0</version>
-		</dependency>
-		            
 		<!-- Apache Commons -->
 		<dependency>
 			<groupId>commons-collections</groupId>
@@ -34,6 +31,13 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+		
+        <!-- Gson (json for java) -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
 	</dependencies>
 
 </project>
