[maven-release-plugin] prepare release release-0.4

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <groupId>ro.fortsoft.wicket.pivot</groupId>
         <artifactId>wicket-pivot-parent</artifactId>
-        <version>0.4-SNAPSHOT</version>
+        <version>0.4</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>wicket-pivot-demo</artifactId>
-    <version>0.4-SNAPSHOT</version>
+    <version>0.4</version>
     <packaging>war</packaging>
     <name>Wicket Pivot Demo</name>
         
