--- a/wicket-pivot/pom.xml
+++ b/wicket-pivot/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <groupId>ro.fortsoft.wicket.pivot</groupId>
         <artifactId>wicket-pivot-parent</artifactId>
-        <version>0.4-SNAPSHOT</version>
+        <version>0.4</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>wicket-pivot</artifactId>
-    <version>0.4-SNAPSHOT</version>
+    <version>0.4</version>
     <packaging>jar</packaging>
 	<name>Wicket Pivot</name>
 	<description>Simple web pivot table using Apache Wicket</description>
