--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
     
     <modules>
         <module>wicket-pivot</module>
+        <module>wicket-pivot-exporter</module>
         <module>demo</module>
     </modules>
 
