PivotConfig: Basic UI for store/restore of the configuration
Also did a small bugfix on the interface of IPivotConfigStorage. The UI
is functional, but not really pretty at the moment.

--- a/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/wicket-package.properties
+++ b/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/wicket-package.properties
@@ -10,3 +10,9 @@ autoCalculate=Auto calculate
 showPivot=Show pivot
 
 downloadAs=Download as ${}
+
+loadSaveConfiguration=Load/Save Configuration
+loadConfiguration=Load
+deleteConfiguration=Delete
+saveConfiguration=Save configuration
+savedConfigurations=Your saved configurations:
