--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
         </dependency>        
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
         
         <!-- Test -->
         <dependency>
