--- a/wicket-pivot-exporter/pom.xml
+++ b/wicket-pivot-exporter/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
 		<groupId>ro.fortsoft.wicket.pivot</groupId>
 		<artifactId>wicket-pivot-parent</artifactId>
-		<version>0.5-SNAPSHOT</version>
+		<version>0.5.0</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>wicket-pivot-exporter</artifactId>
-	<version>0.5-SNAPSHOT</version>
+	<version>0.5.0</version>
 	<packaging>jar</packaging>
 	<name>Wicket Pivot Exporter</name>
 	<description>Simple web pivot table using Apache Wicket Exporter Plugins</description>
