--- a/wicket-pivot-exporter/pom.xml
+++ b/wicket-pivot-exporter/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>ro.fortsoft.wicket.pivot</groupId>
 		<artifactId>wicket-pivot-parent</artifactId>
-		<version>0.5.0</version>
+		<version>0.6.0-SNAPHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>wicket-pivot-exporter</artifactId>
-	<version>0.5.0</version>
+	<version>0.6.0-SNAPHOT</version>
 	<packaging>jar</packaging>
 	<name>Wicket Pivot Exporter</name>
 	<description>Simple web pivot table using Apache Wicket Exporter Plugins</description>
